--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="MotionZero:Exploiting Motion Priors for Zero-shot Text-to-Video Generation">
 	<meta name="keywords" content="MotionZero">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MotionZero:Exploiting Motion Priors for Zero-shot Text-to-Video Generation</title>
+	<title>MotionZero</title>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -60,7 +60,7 @@
 		</div>
 		<div class="page-title" style="padding:2vh 1vw 0vh 1vw;display:flex;flex-direction:column;align-items:center;">
 			<h1>MotionZero</h1>
-			<h2>Exploiting Motion Priors for Zero-shot Text-to-Video Generation</h2>
+			<h2>Leveraging Motion Priors in Text-to-Video Synthesis</h2>
 		</div>
 		<div class="row">
 			<div class="col-12 link">
@@ -68,7 +68,7 @@
 					<div class="pc-generated" style="width:100%;">
 						<div class="" style="display:flex;justify-content:center;width:100%;">
 							<div class="newTitlePc">
-								<div class="title-link">
+<!-- 								<div class="title-link">
 									<a style="color: rgb(82, 122, 188); font-style: italic;">Sitong Su</a>
 								</div>
 								<div class="title-link">
@@ -82,7 +82,7 @@
 								</div>
 								<div class="title-link">
 									<a style="color: rgb(82, 122, 188); font-style: italic;">Jingkuan Song</a>
-								</div>
+								</div> -->
 								<div class="title-link mob-generated"></div>
 							</div>
 						</div>
@@ -92,18 +92,18 @@
 		</div>
 		<div class="background-block row newBtnLayout">
 			<div class="newBtnLayout-shadow">
-				<div class="col-12">
+<!-- 				<div class="col-12">
 					<div class="mob-inst-text" style="padding:0 0 10px 0;text-align:center;font-size:30px;">
 						Center for Future Media, University of Electronic Science and Technology of China</div>
-				</div>
-				<div class="button-flex">
+				</div> -->
+<!-- 				<div class="button-flex">
 					<a href="https://arxiv.org/pdf/2311.16635.pdf" class="button-link">
 						<span class="icon">
 							<i class="ai ai-arxiv"></i>
 						</span>
 						<span>arXiv Paper</span>
 					</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="row">
@@ -424,7 +424,7 @@ Extensive experiments demonstrate that our strategy could correctly control moti
 		</div>
 		
 
-		<div class="background-block row mob-bottom" style="padding-bottom:5vh;">
+<!-- 		<div class="background-block row mob-bottom" style="padding-bottom:5vh;">
 			<div class="col-12 Abstract-box mob-col-12" style="padding:0 !important;">
 				<div class="Abstract title-layout">
 					<h3 class="font-ma">BibTeX</h3>
@@ -443,7 +443,7 @@ Extensive experiments demonstrate that our strategy could correctly control moti
 					  }</pre>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 </html>
