--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 		</div>
 		<div class="page-title" style="padding:2vh 1vw 0vh 1vw;display:flex;flex-direction:column;align-items:center;">
 			<h1>MotionZero</h1>
-			<h2>Leveraging Motion Priors in Text-to-Video Synthesis</h2>
+			<h2></h2>
 		</div>
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="col-12 link">
 				<div class="row">
 					<div class="pc-generated" style="width:100%;">
@@ -83,14 +83,14 @@
 								<div class="title-link">
 									<a style="color: rgb(82, 122, 188); font-style: italic;">Jingkuan Song</a>
 								</div> -->
-								<div class="title-link mob-generated"></div>
+<!-- 								<div class="title-link mob-generated"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="background-block row newBtnLayout">
+		</div> -->
+<!-- 		<div class="background-block row newBtnLayout">
 			<div class="newBtnLayout-shadow">
 <!-- 				<div class="col-12">
 					<div class="mob-inst-text" style="padding:0 0 10px 0;text-align:center;font-size:30px;">
@@ -104,8 +104,8 @@
 						<span>arXiv Paper</span>
 					</a>
 				</div> -->
-			</div>
-		</div>
+<!-- 			</div>
+		</div> -->
 		<div class="row">
 			<img style="width:100%;" src="./static/banner.jpg" alt="" />
 		</div>
@@ -412,7 +412,7 @@ Extensive experiments demonstrate that our strategy could correctly control moti
 				<center>
 					<figure>
 						<video width="100%" height="auto" muted playsinline controls preload="metadata" onclick="this.play()">
-							<source src="assets/A_chef_chopping_vegetables_in_a_busy_restaurant..mp4" type="video/mp4">
+							<source src="assets/A_chef_chopping_vegetables_in_a_busy_restaurant.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<figcaption class="caption">
