--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ Extensive experiments demonstrate that our strategy could correctly control moti
 				<center>
 					<figure>
 						<video width="100%" height="auto" muted playsinline controls preload="metadata" onclick="this.play()">
-							<source src="assets/A_chef_chopping_vegetables_in_a_busy_restaurant.mp4" type="video/mp4">
+							<source src="assets/A_chef_chopping_vegetables_in_a_busy_restaurant..mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<figcaption class="caption">
